--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,14 @@ wheels/
 .installed.cfg
 *.egg
 
+# Node.js
+node_modules/
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+package-lock.json
+yarn.lock
+
 # Virtual Environment
 venv/
 env/
